--- a/paper_data_v3/enet_predictions/enet_who_comparison.ipynb
+++ b/paper_data_v3/enet_predictions/enet_who_comparison.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "2b5a547b",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "from distance import hamming as distance\n",
     "pd.set_option('display.max_columns', None)\n",
     "from domseq import DomSeq\n",
+    "from zedstat.textable import textable\n",
     "\n",
     "\n",
     "WHO_DIR = 'data/who/'\n",
@@ -900,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1581dcb5",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1087,7 @@
        "11               15.17                          NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,17 +1103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "4f4568bf",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.047\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1134,145 +1128,258 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>season</th>\n",
-       "      <th>name</th>\n",
-       "      <th>name_who</th>\n",
-       "      <th>ha_who_error</th>\n",
-       "      <th>ha_enet_error</th>\n",
+       "      <th>WHO Recommendation</th>\n",
+       "      <th>Enet Recommendation</th>\n",
+       "      <th>Emergenet</th>\n",
+       "      <th>Emergenet Improvement</th>\n",
+       "      <th>Mutational Load + LBI</th>\n",
+       "      <th>Mutational Load + LBI Improvement</th>\n",
+       "      <th>HI + Mutational Load</th>\n",
+       "      <th>HI + Mutational Load Improvement</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>04</td>\n",
-       "      <td>A/Queensland/40/2003</td>\n",
+       "      <th>2003-10-01</th>\n",
        "      <td>A/Fujian/411/2002</td>\n",
-       "      <td>9.333333</td>\n",
-       "      <td>7.280702</td>\n",
+       "      <td>A/Queensland/40/2003</td>\n",
+       "      <td>7.28</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>8.44</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>2.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>05</td>\n",
-       "      <td>A/Canterbury/11/2004</td>\n",
+       "      <th>2004-10-01</th>\n",
        "      <td>A/Wellington/1/2004</td>\n",
-       "      <td>6.681481</td>\n",
-       "      <td>4.055556</td>\n",
+       "      <td>A/Canterbury/11/2004</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>2.63</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>1.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>08</td>\n",
-       "      <td>A/Washington/UR06-0225/2007</td>\n",
-       "      <td>A/Brisbane/10/2007</td>\n",
-       "      <td>4.904000</td>\n",
-       "      <td>5.784000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>10</td>\n",
-       "      <td>A/California/VRDL255/2009</td>\n",
-       "      <td>A/Perth/16/2009</td>\n",
-       "      <td>8.857143</td>\n",
-       "      <td>8.025794</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>14</td>\n",
-       "      <td>A/New_York/05/2013</td>\n",
-       "      <td>A/Texas/50/2012</td>\n",
-       "      <td>8.756010</td>\n",
-       "      <td>6.656250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>15</td>\n",
-       "      <td>A/Boston/DOA2-162/2012</td>\n",
-       "      <td>A/Switzerland/9715293/2013</td>\n",
-       "      <td>10.721925</td>\n",
-       "      <td>9.852050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>16</td>\n",
-       "      <td>A/Scotland/146/2015_(H3N2)</td>\n",
-       "      <td>A/Hong Kong/4801/2014</td>\n",
-       "      <td>6.901905</td>\n",
-       "      <td>7.641496</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>18</td>\n",
-       "      <td>A/Tanzania/2220/2016</td>\n",
-       "      <td>A/Singapore/INFIMH-16-0019/2016</td>\n",
-       "      <td>9.570694</td>\n",
-       "      <td>8.790488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>19</td>\n",
-       "      <td>A/Heilongjiang-Xiangyang/11347/2015</td>\n",
-       "      <td>A/Switzerland/8060/2017</td>\n",
-       "      <td>15.914564</td>\n",
-       "      <td>13.969900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>05_06</td>\n",
-       "      <td>A/Canterbury/18/2004</td>\n",
+       "      <th>2005-04-01</th>\n",
        "      <td>A/California/7/2004</td>\n",
-       "      <td>13.000000</td>\n",
-       "      <td>5.175325</td>\n",
+       "      <td>A/Canterbury/18/2004</td>\n",
+       "      <td>5.18</td>\n",
+       "      <td>7.82</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>2.89</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>2.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>06_07</td>\n",
-       "      <td>A/Mexico/TLA2227/2005</td>\n",
+       "      <th>2006-04-01</th>\n",
        "      <td>A/Wisconsin/67/2005</td>\n",
-       "      <td>10.897727</td>\n",
-       "      <td>8.537879</td>\n",
+       "      <td>A/Mexico/TLA2227/2005</td>\n",
+       "      <td>8.54</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>5.36</td>\n",
+       "      <td>4.94</td>\n",
+       "      <td>5.37</td>\n",
+       "      <td>4.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>13_14</td>\n",
-       "      <td>A/Boston/DOA2-162/2012</td>\n",
+       "      <th>2007-10-01</th>\n",
+       "      <td>A/Brisbane/10/2007</td>\n",
+       "      <td>A/Washington/UR06-0225/2007</td>\n",
+       "      <td>5.78</td>\n",
+       "      <td>-0.88</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-10-01</th>\n",
+       "      <td>A/Perth/16/2009</td>\n",
+       "      <td>A/California/VRDL255/2009</td>\n",
+       "      <td>8.03</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>6.95</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>7.93</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-04-01</th>\n",
        "      <td>A/Victoria/361/2011</td>\n",
-       "      <td>8.790281</td>\n",
-       "      <td>3.997442</td>\n",
+       "      <td>A/Boston/DOA2-162/2012</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.79</td>\n",
+       "      <td>3.72</td>\n",
+       "      <td>2.54</td>\n",
+       "      <td>7.02</td>\n",
+       "      <td>-0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-10-01</th>\n",
+       "      <td>A/Texas/50/2012</td>\n",
+       "      <td>A/New_York/05/2013</td>\n",
+       "      <td>6.66</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>6.54</td>\n",
+       "      <td>2.11</td>\n",
+       "      <td>6.89</td>\n",
+       "      <td>1.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-10-01</th>\n",
+       "      <td>A/Switzerland/9715293/2013</td>\n",
+       "      <td>A/Boston/DOA2-162/2012</td>\n",
+       "      <td>9.85</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>3.88</td>\n",
+       "      <td>6.94</td>\n",
+       "      <td>3.88</td>\n",
+       "      <td>6.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-10-01</th>\n",
+       "      <td>A/Hong Kong/4801/2014</td>\n",
+       "      <td>A/Scotland/146/2015_(H3N2)</td>\n",
+       "      <td>7.64</td>\n",
+       "      <td>-0.74</td>\n",
+       "      <td>7.33</td>\n",
+       "      <td>-1.24</td>\n",
+       "      <td>6.09</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-10-01</th>\n",
+       "      <td>A/Singapore/INFIMH-16-0019/2016</td>\n",
+       "      <td>A/Tanzania/2220/2016</td>\n",
+       "      <td>8.79</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>7.47</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>7.81</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-01</th>\n",
+       "      <td>A/Switzerland/8060/2017</td>\n",
+       "      <td>A/Heilongjiang-Xiangyang/11347/2015</td>\n",
+       "      <td>13.97</td>\n",
+       "      <td>1.94</td>\n",
+       "      <td>17.08</td>\n",
+       "      <td>-1.91</td>\n",
+       "      <td>10.42</td>\n",
+       "      <td>4.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.48</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>6.63</td>\n",
+       "      <td>1.93</td>\n",
+       "      <td>6.22</td>\n",
+       "      <td>2.33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   season                                 name  \\\n",
-       "1      04                 A/Queensland/40/2003   \n",
-       "2      05                 A/Canterbury/11/2004   \n",
-       "5      08          A/Washington/UR06-0225/2007   \n",
-       "7      10            A/California/VRDL255/2009   \n",
-       "11     14                   A/New_York/05/2013   \n",
-       "12     15               A/Boston/DOA2-162/2012   \n",
-       "13     16           A/Scotland/146/2015_(H3N2)   \n",
-       "15     18                 A/Tanzania/2220/2016   \n",
-       "16     19  A/Heilongjiang-Xiangyang/11347/2015   \n",
-       "2   05_06                 A/Canterbury/18/2004   \n",
-       "3   06_07                A/Mexico/TLA2227/2005   \n",
-       "10  13_14               A/Boston/DOA2-162/2012   \n",
+       "                         WHO Recommendation  \\\n",
+       "Timepoint                                     \n",
+       "2003-10-01                A/Fujian/411/2002   \n",
+       "2004-10-01              A/Wellington/1/2004   \n",
+       "2005-04-01              A/California/7/2004   \n",
+       "2006-04-01              A/Wisconsin/67/2005   \n",
+       "2007-10-01               A/Brisbane/10/2007   \n",
+       "2009-10-01                  A/Perth/16/2009   \n",
+       "2012-04-01              A/Victoria/361/2011   \n",
+       "2013-10-01                  A/Texas/50/2012   \n",
+       "2014-10-01       A/Switzerland/9715293/2013   \n",
+       "2015-10-01            A/Hong Kong/4801/2014   \n",
+       "2017-10-01  A/Singapore/INFIMH-16-0019/2016   \n",
+       "2018-10-01          A/Switzerland/8060/2017   \n",
+       "NaN                                     NaN   \n",
        "\n",
-       "                           name_who  ha_who_error  ha_enet_error  \n",
-       "1                 A/Fujian/411/2002      9.333333       7.280702  \n",
-       "2               A/Wellington/1/2004      6.681481       4.055556  \n",
-       "5                A/Brisbane/10/2007      4.904000       5.784000  \n",
-       "7                   A/Perth/16/2009      8.857143       8.025794  \n",
-       "11                  A/Texas/50/2012      8.756010       6.656250  \n",
-       "12       A/Switzerland/9715293/2013     10.721925       9.852050  \n",
-       "13            A/Hong Kong/4801/2014      6.901905       7.641496  \n",
-       "15  A/Singapore/INFIMH-16-0019/2016      9.570694       8.790488  \n",
-       "16          A/Switzerland/8060/2017     15.914564      13.969900  \n",
-       "2               A/California/7/2004     13.000000       5.175325  \n",
-       "3               A/Wisconsin/67/2005     10.897727       8.537879  \n",
-       "10              A/Victoria/361/2011      8.790281       3.997442  "
+       "                            Enet Recommendation  Emergenet  \\\n",
+       "Timepoint                                                    \n",
+       "2003-10-01                 A/Queensland/40/2003       7.28   \n",
+       "2004-10-01                 A/Canterbury/11/2004       4.06   \n",
+       "2005-04-01                 A/Canterbury/18/2004       5.18   \n",
+       "2006-04-01                A/Mexico/TLA2227/2005       8.54   \n",
+       "2007-10-01          A/Washington/UR06-0225/2007       5.78   \n",
+       "2009-10-01            A/California/VRDL255/2009       8.03   \n",
+       "2012-04-01               A/Boston/DOA2-162/2012       4.00   \n",
+       "2013-10-01                   A/New_York/05/2013       6.66   \n",
+       "2014-10-01               A/Boston/DOA2-162/2012       9.85   \n",
+       "2015-10-01           A/Scotland/146/2015_(H3N2)       7.64   \n",
+       "2017-10-01                 A/Tanzania/2220/2016       8.79   \n",
+       "2018-10-01  A/Heilongjiang-Xiangyang/11347/2015      13.97   \n",
+       "NaN                                         NaN       7.48   \n",
+       "\n",
+       "            Emergenet Improvement  Mutational Load + LBI  \\\n",
+       "Timepoint                                                  \n",
+       "2003-10-01                   2.05                   8.44   \n",
+       "2004-10-01                   2.63                   4.38   \n",
+       "2005-04-01                   7.82                   4.60   \n",
+       "2006-04-01                   2.36                   5.36   \n",
+       "2007-10-01                  -0.88                   3.78   \n",
+       "2009-10-01                   0.83                   6.95   \n",
+       "2012-04-01                   4.79                   3.72   \n",
+       "2013-10-01                   2.10                   6.54   \n",
+       "2014-10-01                   0.87                   3.88   \n",
+       "2015-10-01                  -0.74                   7.33   \n",
+       "2017-10-01                   0.78                   7.47   \n",
+       "2018-10-01                   1.94                  17.08   \n",
+       "NaN                          2.05                   6.63   \n",
+       "\n",
+       "            Mutational Load + LBI Improvement  HI + Mutational Load  \\\n",
+       "Timepoint                                                             \n",
+       "2003-10-01                               1.01                  6.50   \n",
+       "2004-10-01                               1.70                  4.38   \n",
+       "2005-04-01                               2.89                  4.60   \n",
+       "2006-04-01                               4.94                  5.37   \n",
+       "2007-10-01                               2.00                  3.78   \n",
+       "2009-10-01                               1.00                  7.93   \n",
+       "2012-04-01                               2.54                  7.02   \n",
+       "2013-10-01                               2.11                  6.89   \n",
+       "2014-10-01                               6.94                  3.88   \n",
+       "2015-10-01                              -1.24                  6.09   \n",
+       "2017-10-01                               1.15                  7.81   \n",
+       "2018-10-01                              -1.91                 10.42   \n",
+       "NaN                                      1.93                  6.22   \n",
+       "\n",
+       "            HI + Mutational Load Improvement  \n",
+       "Timepoint                                     \n",
+       "2003-10-01                              2.95  \n",
+       "2004-10-01                              1.70  \n",
+       "2005-04-01                              2.89  \n",
+       "2006-04-01                              4.94  \n",
+       "2007-10-01                              2.00  \n",
+       "2009-10-01                              0.02  \n",
+       "2012-04-01                             -0.75  \n",
+       "2013-10-01                              1.76  \n",
+       "2014-10-01                              6.94  \n",
+       "2015-10-01                              0.00  \n",
+       "2017-10-01                              0.80  \n",
+       "2018-10-01                              4.75  \n",
+       "NaN                                     2.33  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,11 +1387,31 @@
    "source": [
     "south = pd.read_csv(OUT_DIR + 'south_h3n2_single_cluster.csv', converters={'season': str})[['season','name','name_who','ha_who_error','ha_enet_error']].iloc[[1,2,5,7,11,12,13,15,16]]\n",
     "north = pd.read_csv(OUT_DIR + 'north_h3n2_single_cluster.csv', converters={'season': str})[['season','name','name_who','ha_who_error','ha_enet_error']].iloc[[2,3,10]]\n",
+    "enet = south.append(north)\n",
     "\n",
-    "enet = np.sum(south['ha_who_error'] - south['ha_enet_error']) + np.sum(north['ha_who_error'] - north['ha_enet_error'])\n",
+    "new_order = np.array([1, 2, 10, 11, 3, 4, 12, 5, 6, 7, 8, 9])\n",
+    "enet = enet.iloc[new_order - 1].reset_index(drop=True)\n",
+    "enet['enet_improvement'] = enet['ha_who_error'] - enet['ha_enet_error']\n",
     "\n",
-    "print(round(enet/12, 3))\n",
-    "south.append(north)"
+    "# Make table for paper\n",
+    "enet['Timepoint'] = huddleston[:12]['timepoint']\n",
+    "enet['Mutational Load + LBI'] = huddleston[36:48]['distance_to_future'].values\n",
+    "enet['Mutational Load + LBI Improvement'] = -huddleston[36:48]['relative_distance_to_future'].values\n",
+    "enet['HI + Mutational Load'] = huddleston[48:60]['distance_to_future'].values\n",
+    "enet['HI + Mutational Load Improvement'] = -huddleston[48:60]['relative_distance_to_future'].values\n",
+    "enet = enet.rename(columns={'name_who':'WHO Recommendation', \n",
+    "                            'name':'Enet Recommendation',\n",
+    "                            'ha_enet_error':'Emergenet',\n",
+    "                            'enet_improvement':'Emergenet Improvement'})\n",
+    "enet = enet[['Timepoint', 'WHO Recommendation', 'Enet Recommendation', \n",
+    "             'Emergenet', 'Emergenet Improvement',\n",
+    "             'Mutational Load + LBI', 'Mutational Load + LBI Improvement', \n",
+    "             'HI + Mutational Load', 'HI + Mutational Load Improvement']].round(2)\n",
+    "enet = enet.append(enet.mean(), ignore_index=True).round(2)\n",
+    "enet.to_csv(OUT_DIR+'huddleston_comparison.csv', index=False)\n",
+    "enet = enet.set_index('Timepoint')\n",
+    "textable(enet, tabname = 'tables/huddleston_comparison.tex', FORMAT='%1.2f')\n",
+    "enet"
    ]
   }
  ],
