--- a/paper_data_v3/enet_predictions/enet_who_comparison.ipynb
+++ b/paper_data_v3/enet_predictions/enet_who_comparison.ipynb
@@ -880,6 +880,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0305dd64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reformat for plotdata in paper\n",
+    "for FILE in FILES:\n",
+    "    df = pd.read_csv(OUT_DIR + FILE + '.csv')\n",
+    "    df = df.rename(columns={'ha_who_error':'ldistance_WHO', 'ha_enet_error':'ldistance_Qnet_recommendation'})\n",
+    "    df.to_csv(OUT_DIR+ 'plotdata/' + FILE + '_ha.csv', index=False)\n",
+    "    \n",
+    "for FILE in FILES:\n",
+    "    df = pd.read_csv(OUT_DIR + FILE + '.csv')\n",
+    "    df = df.rename(columns={'na_who_error':'ldistance_WHO', 'na_enet_error':'ldistance_Qnet_recommendation'})\n",
+    "    df.to_csv(OUT_DIR + 'plotdata/' + FILE + '_na.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "78efc808",
    "metadata": {},
@@ -1103,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "id": "4f4568bf",
    "metadata": {},
    "outputs": [
@@ -1129,17 +1148,15 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>WHO Recommendation</th>\n",
-       "      <th>Enet Recommendation</th>\n",
-       "      <th>Emergenet</th>\n",
+       "      <th>Emergenet Distance to Future</th>\n",
        "      <th>Emergenet Improvement</th>\n",
-       "      <th>Mutational Load + LBI</th>\n",
+       "      <th>Mutational Load + LBI Distance to Future</th>\n",
        "      <th>Mutational Load + LBI Improvement</th>\n",
-       "      <th>HI + Mutational Load</th>\n",
+       "      <th>HI + Mutational Load Distance to Future</th>\n",
        "      <th>HI + Mutational Load Improvement</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Timepoint</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1153,7 +1170,6 @@
        "    <tr>\n",
        "      <th>2003-10-01</th>\n",
        "      <td>A/Fujian/411/2002</td>\n",
-       "      <td>A/Queensland/40/2003</td>\n",
        "      <td>7.28</td>\n",
        "      <td>2.05</td>\n",
        "      <td>8.44</td>\n",
@@ -1164,7 +1180,6 @@
        "    <tr>\n",
        "      <th>2004-10-01</th>\n",
        "      <td>A/Wellington/1/2004</td>\n",
-       "      <td>A/Canterbury/11/2004</td>\n",
        "      <td>4.06</td>\n",
        "      <td>2.63</td>\n",
        "      <td>4.38</td>\n",
@@ -1175,7 +1190,6 @@
        "    <tr>\n",
        "      <th>2005-04-01</th>\n",
        "      <td>A/California/7/2004</td>\n",
-       "      <td>A/Canterbury/18/2004</td>\n",
        "      <td>5.18</td>\n",
        "      <td>7.82</td>\n",
        "      <td>4.60</td>\n",
@@ -1186,7 +1200,6 @@
        "    <tr>\n",
        "      <th>2006-04-01</th>\n",
        "      <td>A/Wisconsin/67/2005</td>\n",
-       "      <td>A/Mexico/TLA2227/2005</td>\n",
        "      <td>8.54</td>\n",
        "      <td>2.36</td>\n",
        "      <td>5.36</td>\n",
@@ -1197,7 +1210,6 @@
        "    <tr>\n",
        "      <th>2007-10-01</th>\n",
        "      <td>A/Brisbane/10/2007</td>\n",
-       "      <td>A/Washington/UR06-0225/2007</td>\n",
        "      <td>5.78</td>\n",
        "      <td>-0.88</td>\n",
        "      <td>3.78</td>\n",
@@ -1208,7 +1220,6 @@
        "    <tr>\n",
        "      <th>2009-10-01</th>\n",
        "      <td>A/Perth/16/2009</td>\n",
-       "      <td>A/California/VRDL255/2009</td>\n",
        "      <td>8.03</td>\n",
        "      <td>0.83</td>\n",
        "      <td>6.95</td>\n",
@@ -1219,7 +1230,6 @@
        "    <tr>\n",
        "      <th>2012-04-01</th>\n",
        "      <td>A/Victoria/361/2011</td>\n",
-       "      <td>A/Boston/DOA2-162/2012</td>\n",
        "      <td>4.00</td>\n",
        "      <td>4.79</td>\n",
        "      <td>3.72</td>\n",
@@ -1230,7 +1240,6 @@
        "    <tr>\n",
        "      <th>2013-10-01</th>\n",
        "      <td>A/Texas/50/2012</td>\n",
-       "      <td>A/New_York/05/2013</td>\n",
        "      <td>6.66</td>\n",
        "      <td>2.10</td>\n",
        "      <td>6.54</td>\n",
@@ -1241,7 +1250,6 @@
        "    <tr>\n",
        "      <th>2014-10-01</th>\n",
        "      <td>A/Switzerland/9715293/2013</td>\n",
-       "      <td>A/Boston/DOA2-162/2012</td>\n",
        "      <td>9.85</td>\n",
        "      <td>0.87</td>\n",
        "      <td>3.88</td>\n",
@@ -1252,7 +1260,6 @@
        "    <tr>\n",
        "      <th>2015-10-01</th>\n",
        "      <td>A/Hong Kong/4801/2014</td>\n",
-       "      <td>A/Scotland/146/2015_(H3N2)</td>\n",
        "      <td>7.64</td>\n",
        "      <td>-0.74</td>\n",
        "      <td>7.33</td>\n",
@@ -1263,7 +1270,6 @@
        "    <tr>\n",
        "      <th>2017-10-01</th>\n",
        "      <td>A/Singapore/INFIMH-16-0019/2016</td>\n",
-       "      <td>A/Tanzania/2220/2016</td>\n",
        "      <td>8.79</td>\n",
        "      <td>0.78</td>\n",
        "      <td>7.47</td>\n",
@@ -1274,7 +1280,6 @@
        "    <tr>\n",
        "      <th>2018-10-01</th>\n",
        "      <td>A/Switzerland/8060/2017</td>\n",
-       "      <td>A/Heilongjiang-Xiangyang/11347/2015</td>\n",
        "      <td>13.97</td>\n",
        "      <td>1.94</td>\n",
        "      <td>17.08</td>\n",
@@ -1284,7 +1289,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NaN</th>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>7.48</td>\n",
        "      <td>2.05</td>\n",
@@ -1298,69 +1302,69 @@
        "</div>"
       ],
       "text/plain": [
-       "                         WHO Recommendation  \\\n",
-       "Timepoint                                     \n",
-       "2003-10-01                A/Fujian/411/2002   \n",
-       "2004-10-01              A/Wellington/1/2004   \n",
-       "2005-04-01              A/California/7/2004   \n",
-       "2006-04-01              A/Wisconsin/67/2005   \n",
-       "2007-10-01               A/Brisbane/10/2007   \n",
-       "2009-10-01                  A/Perth/16/2009   \n",
-       "2012-04-01              A/Victoria/361/2011   \n",
-       "2013-10-01                  A/Texas/50/2012   \n",
-       "2014-10-01       A/Switzerland/9715293/2013   \n",
-       "2015-10-01            A/Hong Kong/4801/2014   \n",
-       "2017-10-01  A/Singapore/INFIMH-16-0019/2016   \n",
-       "2018-10-01          A/Switzerland/8060/2017   \n",
-       "NaN                                     NaN   \n",
+       "                         WHO Recommendation  Emergenet Distance to Future  \\\n",
+       "Timepoint                                                                   \n",
+       "2003-10-01                A/Fujian/411/2002                          7.28   \n",
+       "2004-10-01              A/Wellington/1/2004                          4.06   \n",
+       "2005-04-01              A/California/7/2004                          5.18   \n",
+       "2006-04-01              A/Wisconsin/67/2005                          8.54   \n",
+       "2007-10-01               A/Brisbane/10/2007                          5.78   \n",
+       "2009-10-01                  A/Perth/16/2009                          8.03   \n",
+       "2012-04-01              A/Victoria/361/2011                          4.00   \n",
+       "2013-10-01                  A/Texas/50/2012                          6.66   \n",
+       "2014-10-01       A/Switzerland/9715293/2013                          9.85   \n",
+       "2015-10-01            A/Hong Kong/4801/2014                          7.64   \n",
+       "2017-10-01  A/Singapore/INFIMH-16-0019/2016                          8.79   \n",
+       "2018-10-01          A/Switzerland/8060/2017                         13.97   \n",
+       "NaN                                     NaN                          7.48   \n",
        "\n",
-       "                            Enet Recommendation  Emergenet  \\\n",
-       "Timepoint                                                    \n",
-       "2003-10-01                 A/Queensland/40/2003       7.28   \n",
-       "2004-10-01                 A/Canterbury/11/2004       4.06   \n",
-       "2005-04-01                 A/Canterbury/18/2004       5.18   \n",
-       "2006-04-01                A/Mexico/TLA2227/2005       8.54   \n",
-       "2007-10-01          A/Washington/UR06-0225/2007       5.78   \n",
-       "2009-10-01            A/California/VRDL255/2009       8.03   \n",
-       "2012-04-01               A/Boston/DOA2-162/2012       4.00   \n",
-       "2013-10-01                   A/New_York/05/2013       6.66   \n",
-       "2014-10-01               A/Boston/DOA2-162/2012       9.85   \n",
-       "2015-10-01           A/Scotland/146/2015_(H3N2)       7.64   \n",
-       "2017-10-01                 A/Tanzania/2220/2016       8.79   \n",
-       "2018-10-01  A/Heilongjiang-Xiangyang/11347/2015      13.97   \n",
-       "NaN                                         NaN       7.48   \n",
+       "            Emergenet Improvement  Mutational Load + LBI Distance to Future  \\\n",
+       "Timepoint                                                                     \n",
+       "2003-10-01                   2.05                                      8.44   \n",
+       "2004-10-01                   2.63                                      4.38   \n",
+       "2005-04-01                   7.82                                      4.60   \n",
+       "2006-04-01                   2.36                                      5.36   \n",
+       "2007-10-01                  -0.88                                      3.78   \n",
+       "2009-10-01                   0.83                                      6.95   \n",
+       "2012-04-01                   4.79                                      3.72   \n",
+       "2013-10-01                   2.10                                      6.54   \n",
+       "2014-10-01                   0.87                                      3.88   \n",
+       "2015-10-01                  -0.74                                      7.33   \n",
+       "2017-10-01                   0.78                                      7.47   \n",
+       "2018-10-01                   1.94                                     17.08   \n",
+       "NaN                          2.05                                      6.63   \n",
        "\n",
-       "            Emergenet Improvement  Mutational Load + LBI  \\\n",
-       "Timepoint                                                  \n",
-       "2003-10-01                   2.05                   8.44   \n",
-       "2004-10-01                   2.63                   4.38   \n",
-       "2005-04-01                   7.82                   4.60   \n",
-       "2006-04-01                   2.36                   5.36   \n",
-       "2007-10-01                  -0.88                   3.78   \n",
-       "2009-10-01                   0.83                   6.95   \n",
-       "2012-04-01                   4.79                   3.72   \n",
-       "2013-10-01                   2.10                   6.54   \n",
-       "2014-10-01                   0.87                   3.88   \n",
-       "2015-10-01                  -0.74                   7.33   \n",
-       "2017-10-01                   0.78                   7.47   \n",
-       "2018-10-01                   1.94                  17.08   \n",
-       "NaN                          2.05                   6.63   \n",
+       "            Mutational Load + LBI Improvement  \\\n",
+       "Timepoint                                       \n",
+       "2003-10-01                               1.01   \n",
+       "2004-10-01                               1.70   \n",
+       "2005-04-01                               2.89   \n",
+       "2006-04-01                               4.94   \n",
+       "2007-10-01                               2.00   \n",
+       "2009-10-01                               1.00   \n",
+       "2012-04-01                               2.54   \n",
+       "2013-10-01                               2.11   \n",
+       "2014-10-01                               6.94   \n",
+       "2015-10-01                              -1.24   \n",
+       "2017-10-01                               1.15   \n",
+       "2018-10-01                              -1.91   \n",
+       "NaN                                      1.93   \n",
        "\n",
-       "            Mutational Load + LBI Improvement  HI + Mutational Load  \\\n",
-       "Timepoint                                                             \n",
-       "2003-10-01                               1.01                  6.50   \n",
-       "2004-10-01                               1.70                  4.38   \n",
-       "2005-04-01                               2.89                  4.60   \n",
-       "2006-04-01                               4.94                  5.37   \n",
-       "2007-10-01                               2.00                  3.78   \n",
-       "2009-10-01                               1.00                  7.93   \n",
-       "2012-04-01                               2.54                  7.02   \n",
-       "2013-10-01                               2.11                  6.89   \n",
-       "2014-10-01                               6.94                  3.88   \n",
-       "2015-10-01                              -1.24                  6.09   \n",
-       "2017-10-01                               1.15                  7.81   \n",
-       "2018-10-01                              -1.91                 10.42   \n",
-       "NaN                                      1.93                  6.22   \n",
+       "            HI + Mutational Load Distance to Future  \\\n",
+       "Timepoint                                             \n",
+       "2003-10-01                                     6.50   \n",
+       "2004-10-01                                     4.38   \n",
+       "2005-04-01                                     4.60   \n",
+       "2006-04-01                                     5.37   \n",
+       "2007-10-01                                     3.78   \n",
+       "2009-10-01                                     7.93   \n",
+       "2012-04-01                                     7.02   \n",
+       "2013-10-01                                     6.89   \n",
+       "2014-10-01                                     3.88   \n",
+       "2015-10-01                                     6.09   \n",
+       "2017-10-01                                     7.81   \n",
+       "2018-10-01                                    10.42   \n",
+       "NaN                                            6.22   \n",
        "\n",
        "            HI + Mutational Load Improvement  \n",
        "Timepoint                                     \n",
@@ -1379,7 +1383,7 @@
        "NaN                                     2.33  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,18 +1399,18 @@
     "\n",
     "# Make table for paper\n",
     "enet['Timepoint'] = huddleston[:12]['timepoint']\n",
-    "enet['Mutational Load + LBI'] = huddleston[36:48]['distance_to_future'].values\n",
+    "enet['Mutational Load + LBI Distance to Future'] = huddleston[36:48]['distance_to_future'].values\n",
     "enet['Mutational Load + LBI Improvement'] = -huddleston[36:48]['relative_distance_to_future'].values\n",
-    "enet['HI + Mutational Load'] = huddleston[48:60]['distance_to_future'].values\n",
+    "enet['HI + Mutational Load Distance to Future'] = huddleston[48:60]['distance_to_future'].values\n",
     "enet['HI + Mutational Load Improvement'] = -huddleston[48:60]['relative_distance_to_future'].values\n",
     "enet = enet.rename(columns={'name_who':'WHO Recommendation', \n",
     "                            'name':'Enet Recommendation',\n",
-    "                            'ha_enet_error':'Emergenet',\n",
+    "                            'ha_enet_error':'Emergenet Distance to Future',\n",
     "                            'enet_improvement':'Emergenet Improvement'})\n",
-    "enet = enet[['Timepoint', 'WHO Recommendation', 'Enet Recommendation', \n",
-    "             'Emergenet', 'Emergenet Improvement',\n",
-    "             'Mutational Load + LBI', 'Mutational Load + LBI Improvement', \n",
-    "             'HI + Mutational Load', 'HI + Mutational Load Improvement']].round(2)\n",
+    "enet = enet[['Timepoint', 'WHO Recommendation',\n",
+    "             'Emergenet Distance to Future', 'Emergenet Improvement',\n",
+    "             'Mutational Load + LBI Distance to Future', 'Mutational Load + LBI Improvement', \n",
+    "             'HI + Mutational Load Distance to Future', 'HI + Mutational Load Improvement']].round(2)\n",
     "enet = enet.append(enet.mean(), ignore_index=True).round(2)\n",
     "enet.to_csv(OUT_DIR+'huddleston_comparison.csv', index=False)\n",
     "enet = enet.set_index('Timepoint')\n",
